# py-notebooks

./: .gitignore  README.md
01-ai-for-devs-introduction/: 01-ai-creating-model.ipynb
02-ai-for-devs-01-rag/: pyproject.toml  rag.ipynb
docs/: glossary.md
in-process-olap-bench/: chdb-engine.ipynb  hello.py  pyproject.toml
nlp-chart-viz/: nlp-chart-viz.ipynb  pyproject.toml
rocketseat-ai-development-01-descriptive-statistics/: concepts.md  descriptive-statistics.ipynb  pyproject.toml
rocketseat-ai-for-devs-introduction/: pyproject.toml
