[project]
name = "02-ai-for-devs-01-rag-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-google-vertexai>=2.0.11",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.64",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
