[project]
name = "nlp-chart-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "duckdb>=1.1.3",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "sentence-transformers>=3.4.0",
    "transformers>=4.48.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
